package com.tintin.theplyushkin;

import org.springframework.boot.SpringApplication;
import org.springframework.boot.autoconfigure.SpringBootApplication;

@SpringBootApplication
public class ThePlyushkinApplication {

    public static void main(String[] args) {
        SpringApplication.run(ThePlyushkinApplication.class, args);
    }
}
