package com.tintin.theplyushkin.models.util;

public enum AccessLevel {
    USER,
    ADMIN
}
