package com.tintin.theplyushkin.models.util;

public enum DataType {
    INTEGER,
    FLOAT,
    STRING,
    DATE
}
