package com.tintin.theplyushkin.models.util;

public enum VisibilityLevel {
    PRIVATE,
    PUBLIC,
    DELETED
}
